--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+asn1crypto==1.4.0
+crypto==1.4.1
+cryptography==2.8
+pycrypto==2.6.1
+pycryptodomex==3.9.7
 six==1.11.0
 sympy==1.3
 cryptography==2.8
